--- a/templates/header.html
+++ b/templates/header.html
@@ -21,6 +21,8 @@
 													<span class="title-cart"><i class="zmdi zmdi-shopping-basket"></i></span>
                                                     {% if count_items_in_cart > 0  %}
 													<span class="ajax_cart_quantity">{{ count_items_in_cart }}</span>
+                                                        {% else %}
+                                                       <span class="ajax_cart_quantity">0</span>
                                                     {% endif %}
 												</a>
 											</div>
@@ -40,7 +42,7 @@
                                                                  <tr>
 																<td class="product-thumbnail">
 																	<a href="{% url 'product' item.item.name_slug %}">
-																		<img width="80" height="107" alt="" class="img-responsive" src="{{ item.item.itemimage_set.first.image_small.url }}">
+																		<img width="80" height="107" alt="" class="img-responsive" src="{{ item.item.itemimage_set.first.image.url }}">
 																	</a>
 																</td>
 																<td class="product-name">
@@ -48,7 +50,7 @@
 																	<br><span class="amount"><strong>{{ item.number }} X {{ item.item.price }} &#8381; = {{ item.total_price }} &#8381;</strong></span>
 																</td>
 																<td class="product-actions">
-																	<a data-item_id="{{ item.id }}" class="remove" onclick="delete_from_cart(this);return false;">
+																	<a data-item_id="{{ item.item.id }}" class="remove" onclick="delete_from_cart(this);return false;">
 																		<i class="fa fa-times"></i>
 																	</a>
 																</td>
@@ -57,8 +59,9 @@
 															<tr>
 																<td class="actions" colspan="3">
 																	<div class="actions-continue">
-																		<button type="submit" class="btn btn-default">Открыть корзину</button>
-																		<button type="submit" class="btn pull-right btn-primary">Оформить заказ<i class="fa fa-angle-right ml-xs"></i></button>
+                                                                          <a style="color: #FFFFFF !important;" class="btn btn-default" href="{% url 'show_cart' %}"> <i class="fa fa-shopping-cart"> </i> ПРОСМОТР КОРЗИНЫ</a>
+                                                                          <a  style="color: #FFFFFF !important;" class="btn pull-right btn-primary" href="{% url 'checkout' %}"> ОПЛАТА</a>
+
 																	</div>
 																</td>
 															</tr>
