--- a/templates/page/new/category.html
+++ b/templates/page/new/category.html
@@ -18,7 +18,7 @@
                             <div class="block-title">
 								<h4 class="title_block">{{ category.name }}</h4>
 								<ul class="filter-items">
-                                    {% for filter in filters %}
+                                    {% for filter in category.filter_set.all %}
                                          <li><a {% if cur_filter.name_slug == filter.name_slug %} class="filter-active"{% endif %} href="?filter={{ filter.name_slug }}">{{ filter.name }}</a></li>
                                     {% endfor %}
 {#                                    <li><a class="filter-active" href="#">фильтр 1</a></li>#}
@@ -37,5 +37,9 @@
 									</div><!-- end block_content -->
 					</div><!-- end container -->
 				</div>
-    
+  <script>
+
+
+</script>
 {% endblock %}
+
