--- a/templates/page/new/item.html
+++ b/templates/page/new/item.html
@@ -11,7 +11,7 @@
 						<ul class="ul-breadcrumb">
 							<li><a href="/" >Главная</a></li>
                             <li><a href="/" >Каталог</a></li>
-							<li><a href="{% url 'cat'  item.category.name_slug  %}" >{{ item.category.name }}</a></li>
+							<li><a href="{% url 'category'  item.category.name_slug  %}" >{{ item.category.name }}</a></li>
 							<li><span>{{ item.name }}</span></li>
 						</ul>
 
@@ -74,14 +74,13 @@
                     {% if item.is_present %}
 
 
-     <a style="display: inline-block; margin-right: 5px" href="#" onclick="upClick(this)" class="btn status-enable btn-sm product_quantity_down">
-												<i class="fa fa-caret-up"></i>
-											</a>
-                            <input style="    width: 44px;
-    padding: 0 13px;margin-right: 5px" class=" cart-input" type="number" id="{{ item.id }}_items_number" min="1"  value="1" >
-                        <a style="display: inline-block;margin-right: 15px" href="#" onclick="downClick(this)" class="btn status-enable btn-sm product_quantity_down">
-												<i class="fa fa-caret-down"></i>
-											</a>
+
+                          <button type="button" class="btn quantity-left-minus minus" data-item_id="{{ item.id }}" onclick="downClick(this)" ><i class="fa fa-angle-left"></i></button>
+                                        <input id="{{ item.id }}_items_number" type="text" name="quantity" readonly="" class="form-control input-number qty" value="1">
+                                        <button type="button" class="btn quantity-right-plus plus" onclick="upClick(this)" data-item_id="{{ item.id }}"><i class="fa fa-angle-right"></i></button>
+{#                            <input style="    width: 44px;#}
+{#    padding: 0 13px;margin-right: 5px" class=" cart-input" type="number" id="{{ item.id }}_items_number" min="1"  value="1" >#}
+
 
 
 
@@ -356,26 +355,28 @@
 
 <script>
 
-function upClick(b){
-     var $button = $(b);
-   var oldValue = $('.cart-input').val();
+function upClick(el){
+     let item_id= el.dataset.item_id
+    let id= '#' + item_id +'_items_number'
+     let oldValue = $(id).val();
 
 
-	  var newVal = parseFloat(oldValue) + 1;
+	  let newVal = parseFloat(oldValue) + 1;
 
-   $('.cart-input').val(newVal);
+   $(id).val(newVal);
 }
 
-function downClick(b){
-     var $button = $(b);
-  var oldValue = $('.cart-input').val();
+function downClick(el){
+      let item_id= el.dataset.item_id
+    let id= '#' + item_id +'_items_number'
+  let oldValue = $(id).val();
     console.log(oldValue)
         if (parseFloat(oldValue) > 2){
-           var newVal = parseFloat(oldValue) - 1;
+           let newVal = parseFloat(oldValue) - 1;
         }else {
-             var newVal = 1
+             let newVal = 1
         }
-  $('.cart-input').val(newVal);
+  $(id).val(newVal);
 }
 
 
@@ -385,6 +386,6 @@ function downClick(b){
 {% endblock %}
 
 {% block js %}
-      <script src="{% static 'js/jquery.elevatezoom.js' %}"></script>
+      <script src="{% static 'new_static/js/jquery.elevatezoom.js' %}"></script>
      <script src="{% static 'js/jquery.amaran.min.js'%}"></script>
 {% endblock %}
