--- a/templates/page/new/index.html
+++ b/templates/page/new/index.html
@@ -26,12 +26,19 @@
                             {% for category in all_category %}
 
 							<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-								<div class="banner-item effect">
+                            <div class="hvrbox">
 
-
-									<a class="image-wrap" href="{% url 'category' category.name_slug %}" title=""><img class="img-responsive" src="{{ category.image.url }}" alt=""></a>
+                                <img src="{{ category.image.url }}" alt="{{ category.name }}" class="img-responsive hvrbox-layer_bottom">
+                                <div class="hvrbox-layer_top hvrbox-layer_slideup">
+                                    <div class="hvrbox-text">{{ category.name }}<br><a class="btn button btn-primary" href="{% url 'category' category.name_slug %}">Открыть</a></div>
+                                </div>
+                            </div>
+{#								<div class="banner-item effect">#}
+{##}
+{##}
+{#									<a class="image-wrap" href="{% url 'category' category.name_slug %}" title=""><img class="img-responsive" src="{{ category.image.url }}" alt=""></a>#}
 {#                                    <div>{{ category.name }} </div>#}
-								</div>
+{#								</div>#}
 							</div>
                             {% endfor %}
 						</div><!-- end row -->
@@ -93,14 +100,14 @@
                                 <div class="tv-table block">
                                 <div class="tv-tablecell box-image">
                                     <div class="banner-item effectbanner">
-                                        <a class="image-wrap" href="#"><img class="img-responsive" src="{{ collection.image.url }}" alt=""></a>
+                                        <a class="image-wrap" href="{% url 'collection' collection.name_slug %}"><img class="img-responsive" src="{{ collection.image.url }}" alt=""></a>
                                     </div><!--end banner-item-->
                                 </div>
                                 <div class="tv-tablecell">
                                     <div class="block-html block">
                                         <h3>{{ collection.name }}</h3>
 
-                                        <p class="block-htmldes">описание коллекции</p>
+                                        <p class="block-htmldes">{{ collection.description |safe }}</p>
                                         <a class="button btn btn-primary" href="{% url 'collection' collection.name_slug %}" title="Shop now">Открыть</a>
                                     </div><!--end block-html -->
                                 </div>
@@ -112,13 +119,13 @@
 								<div class="block-html block">
 									 <h3>{{ collection.name }}</h3>
 
-                                        <p class="block-htmldes">описание коллекции</p>
+                                        <p class="block-htmldes">{{ collection.description | safe }}</p>
                                         <a class="button btn btn-primary" href="{% url 'collection' collection.name_slug %}" title="Shop now">Открыть</a>
 								</div><!--end block-html -->
 							</div>
 							<div class="tv-tablecell box-image">
 								<div class="banner-item effectbanner">
-									<a class="image-wrap" href="#"><img class="img-responsive" src="{{ collection.image.url }}" alt=""></a>
+									<a class="image-wrap" href="{% url 'collection' collection.name_slug %}"><img class="img-responsive" src="{{ collection.image.url }}" alt=""></a>
 								</div><!--end banner-item-->
 							</div>
 						</div>
