--- a/templates/page/new/registration.html
+++ b/templates/page/new/registration.html
@@ -52,10 +52,10 @@
                         <div id="errorpass" style="color:red;margin-bottom: 5px;"> </div>
 
                         <div class="form-group login-password">
-                            <img id="reg_n1" data-n1="{{ num1 }}" style="pointer-events: none;" src="/static/img/capthca/{{ num1 }}.png">
-                            <img style="pointer-events: none;" src="/static/img/capthca/plus.png">
-                            <img id="reg_n2" data-n2="{{ num2 }}"style="pointer-events: none;" src="/static/img/capthca/{{ num2 }}.png">
-                            <img style="pointer-events: none;" src="/static/img/capthca/eqal.png">
+                            <img id="reg_n1" data-n1="{{ num1 }}" style="pointer-events: none;" src="/static/images/capthca/{{ num1 }}.png">
+                            <img style="pointer-events: none;" src="/static/images/capthca/plus.png">
+                            <img id="reg_n2" data-n2="{{ num2 }}"style="pointer-events: none;" src="/static/images/capthca/{{ num2 }}.png">
+                            <img style="pointer-events: none;" src="/static/images/capthca/eqal.png">
                             <input id="reg_answer" style="    border-color: #DDDDDD;
                                             -webkit-border-radius: 3px;
                                             -moz-border-radius: 3px;
