--- a/templates/basic.html
+++ b/templates/basic.html
@@ -46,7 +46,9 @@
 		<link rel="stylesheet" href="{% static '/new_static/css/theme-responsive.css' %}">
         <link rel="stylesheet" href="{% static '/new_static/css/theme-global.css' %}">
 		<!-- Template Custom CSS -->
-		<link rel="stylesheet" href="{% static '/new_static/css/custom.css' %}">
+        <link rel="stylesheet" href="{% static '/new_static/css/custom.css' %}">
+		<link rel="stylesheet" href="{% static 'css/showLoading.css' %}">
+        <link rel="stylesheet" href="{% static '/new_static/css/hoverbox.css' %}">
 	</head>
 	<body class="index home-1">
      <form id="dummy_form">{% csrf_token %}</form>
