--- a/templates/page/empty_cart.html
+++ b/templates/page/empty_cart.html
@@ -2,16 +2,16 @@
 
     <div class="row innerPage">
         <div class="col-lg-12 col-md-12 col-sm-12">
-            <div class="row userInfo">
+            <div style="padding: 150px 0;" class="row userInfo">
 
                 <p class="lead text-center"> ... ВАША КОРЗИНА ПУСТА .... </p>
 
 
 
-                <h1 class="h1error"><span class="err404"> <i class="fa fa-frown-o"></i></span></h1>
+                <h1 class="h1error" style="text-align: center"><span class="err404"> <i class="fa fa-frown-o"></i></span></h1>
                 <div class="gap"></div>
                 <div class="text-center">
-                    <a href="/" class="btn-outline default-outline">ГЛАВНАЯ СТРАНИЦА</a>
+                    <a href="/" class="btn button btn-primary">ГЛАВНАЯ СТРАНИЦА</a>
                 </div>
 
 
