--- a/templates/page/new/search.html
+++ b/templates/page/new/search.html
@@ -22,7 +22,7 @@
 										<div class="row">
                                             {% for item in all_items %}
 											<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-sp-12">
-												{% include 'pages/_item.html' %}
+												{% include 'page/new/_item.html' %}
 											</div>
 										    {% endfor %}
 										</div><!-- end row -->
